Fixes tinyZenpage selectors being truncated if titles are very long.

--- a/zp-core/zp-extensions/tinymce4/plugins/tinyzenpage/css/tinyzenpage.css
+++ b/zp-core/zp-extensions/tinymce4/plugins/tinyzenpage/css/tinyzenpage.css
@@ -160,3 +160,8 @@ border-top: 1px dotted gray;
 ul.tinynesteditems li ul li {
 margin-left: -25px;
 }
+
+#zenpageselector,
+#albumselector {
+width: 175px !important;
+}
